# llm-profiler

./: .gitignore  README.md  next_actions.md  pyproject.toml
src/: __init__.py  analysis.py  cli.py  config.py  main.py
tests/: __init__.py  conftest.py  test_analysis.py  test_cli.py  test_logging.py  test_repo.py
